[3단계] feat: 권한체계 추가